--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,8 @@ paginate: 20
 per_page: 20
 paginate_path: "/page:num/"
 markdown: kramdown
+kramdown:
+  input: GFM
 gems:
   - jekyll-paginate
   - jekyll-gist
