--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ github_username: StyleTang
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-architect
 gems:
   - jekyll-feed
 exclude:
