--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ github_username: StyleTang
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-hacker
+theme: minima
 gems:
   - jekyll-feed
 exclude:
@@ -46,4 +46,4 @@ paginate_path: "/page:num/"
 markdown: kramdown
 kramdown:
   input: GFM
-gems: [jekyll-paginate, jekyll-gist]
+gems:
